add style to html

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <body>
     <section id="logo-section">
       <div id="banner">
-        <img src="img/iconmonstr-weather-103.svg" alt="mountain" />
-        <h1>Berget</h1>
+        <img src="img/mountain_1553153.png" alt="mountain" />
+        <h1>Limitless</h1>
       </div>
     </section>
     <section id="sign-up-section">
@@ -25,36 +25,48 @@
           This is not a real online service! Lorem ipsum dolor sit amet
           consectetur, adipisicing elit. Necessitatibus, commodi!
           <br />
-          Sign up now to get started.
+          Sign up <em>now</em> to get started.
         </h2>
-        <h2>You know you want to.</h2>
+        <h2>You <em>know</em> you want to.</h2>
       </div>
       <form action="">
-        <label for="f-name">FIRST NAME</label>
-        <input type="text" id="f-name" name="f-name" />
-
-        <label for="l-name">LAST NAME</label>
-        <input type="text" id="l-name" name="l-name" />
-
-        <label for="email">EMAIL</label>
-        <input type="email" id="email" name="email" />
-
-        <label for="phone-number">PHONE NUMBER</label>
-        <input type="tel" id="phone-number" name="phone-number" />
-
-        <label for="password">PASSWORD</label>
-        <input type="password" id="password" name="password" />
-
-        <label for="confirm-password">CONFIRM PASSWORD</label>
-        <input
-          type="confirm-password"
-          id="confirm-password"
-          name="confirm-password"
-        />
+        <section id="input">
+          <h3>Let's do this!</h3>
+          <ul>
+            <li>
+              <label for="f-name">FIRST NAME</label>
+              <input type="text" id="f-name" name="f-name" />
+            </li>
+            <li>
+              <label for="l-name">LAST NAME</label>
+              <input type="text" id="l-name" name="l-name" />
+            </li>
+            <li>
+              <label for="email">EMAIL</label>
+              <input type="email" id="email" name="email" />
+            </li>
+            <li>
+              <label for="phone-number">PHONE NUMBER</label>
+              <input type="tel" id="phone-number" name="phone-number" />
+            </li>
+            <li>
+              <label for="password">PASSWORD</label>
+              <input type="password" id="password" name="password" />
+            </li>
+            <li>
+              <label for="confirm-password">CONFIRM PASSWORD</label>
+              <input
+                type="confirm-password"
+                id="confirm-password"
+                name="confirm-password"
+              />
+            </li>
+          </ul>
+        </section>
 
         <button type="submit">Create Account</button>
       </form>
-      <p>Already have an account? <a href="Log in"></a></p>
+      <p id="already-acc">Already have an account? <a href="">Log in</a></p>
     </section>
   </body>
 </html>
