--- a/index.html
+++ b/index.html
@@ -34,31 +34,32 @@
           <h3>Let's do this!</h3>
           <ul>
             <li>
-              <label for="f-name">FIRST NAME</label>
-              <input type="text" id="f-name" name="f-name" />
+              <label for="f-name">* FIRST NAME</label>
+              <input required type="text" id="f-name" name="f-name" />
             </li>
             <li>
-              <label for="l-name">LAST NAME</label>
-              <input type="text" id="l-name" name="l-name" />
+              <label for="l-name">* LAST NAME</label>
+              <input required type="text" id="l-name" name="l-name" />
             </li>
             <li>
-              <label for="email">EMAIL</label>
-              <input type="email" id="email" name="email" />
+              <label for="email">* EMAIL</label>
+              <input required type="email" id="email" name="email" />
             </li>
             <li>
               <label for="phone-number">PHONE NUMBER</label>
               <input type="tel" id="phone-number" name="phone-number" />
             </li>
             <li>
-              <label for="password">PASSWORD</label>
-              <input type="password" id="password" name="password" />
+              <label for="password">* PASSWORD</label>
+              <input required type="password" id="password" name="password" />
             </li>
             <li>
-              <label for="confirm-password">CONFIRM PASSWORD</label>
+              <label for="confirm-password">* CONFIRM PASSWORD</label>
               <input
                 type="confirm-password"
                 id="confirm-password"
                 name="confirm-password"
+                required
               />
             </li>
           </ul>
